commit sur master

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>OhMyFood</title>
+   <script src="https://kit.fontawesome.com/c637f4814a.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -13,6 +14,16 @@
 <header>
    <h1>OhMyFood</h1>
 </header>
+<main>
+	<div class="ville">
+		<i class="fas fa-map-marker-alt"></i>
+		<h2>Paris, Belleville</h2>
+	</div>
+	<section class="exploration"
+	<h2>Réservez le menu qui<br> vous convient</h2>
+	<p>Découvrez des restaurants d'exception <br>sélectionnés par nos soins</p>
+	<button>Explorez nos restaurants</button>
+</main>
 </body>
 
 </html>
