--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 		<i class="fas fa-map-marker-alt"></i>
 		<h2>Paris, Belleville</h2>
 	</div>
-	<section class="exploration"
-	<h2>Réservez le menu qui<br> vous convient</h2>
-	<p>Découvrez des restaurants d'exception <br>sélectionnés par nos soins</p>
-	<button>Explorez nos restaurants</button>
-</main>
-</body>
+	<section class="exploration">
+	<h2 class="reservez-menu">Réservez le menu qui<br> vous convient</h2>
+	<p class="decouverte-resto">Découvrez des restaurants d'exception <br>sélectionnés par nos soins</p>
+	<button class="explore-bouton">Explorez nos restaurants</button>
 
+</body>
+</section>
+</main>
 </html>
