--- a/index.html
+++ b/index.html
@@ -19,11 +19,47 @@
 		<i class="fas fa-map-marker-alt"></i>
 		<h2>Paris, Belleville</h2>
 	</div>
+	<!--EXPLORATION-->
 	<section class="exploration">
 	<h2 class="reservez-menu">Réservez le menu qui<br> vous convient</h2>
 	<p class="decouverte-resto">Découvrez des restaurants d'exception <br>sélectionnés par nos soins</p>
 	<button class="explore-bouton">Explorez nos restaurants</button>
+	<!--FONCTIONNEMENT-->
+	<section id="fonctionnement" class="section-accueil">
+		<h2>Fonctionnement</h2>
+		<div class="liste-grille">
+			<article class="carte1">
+			<div class="numero">1</div>
+			<span class="icone"> <i class="fas fa-mobile-alt"></i>Choisissez votre restaurant</span>	
+			</article>
+			<article class="carte2">
+				<div class="numero">2</div>
+					<span class="icone"><i class="fas fa-list-ul"></i>Composez votre menu</span>
+			</article>
+			<article class="carte3">
+				<div class="numero">3</div>
+				<span class="icone-couleur"><i class="fas fa-store"></i>Dégustez au restaurant</span>
+			</article>
+		</div>
+	</section>
+	<section id="restaurants" class="selection-restaurant">
+		<h2 class="titre section">Restaurants</h2>
+		<div class="liste-grille">
+			<a href="restaurant/la-palette-du-gout.html" class="restaurantItem">
+				<img class="restaurantImage" src="img/Restaurants/La palette du gout.jpg" height="180"
+					width="335" alt="La palette du goût">
+				<div class="tag">Nouveau</div>
+				<section class="Info">
+					<div class="Texte">
+						<h3 class="nom-resto">La palette du goût</h3>
+						<p class="réservation-resto">Ménilmontant</p>
+					</div>
+					<span class="icone favorite"><i class="fa-regular fa-heart"></i></span>
+					<span class="icon-fav"></span>
+				</section>
 
+
+</section>
 </body>
 </section>
 </main>
