--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<!--EXPLORATION-->
 	<section class="exploration">
 	<h2 class="reservez-menu">Réservez le menu qui<br> vous convient</h2>
-	<p class="decouverte-resto">Découvrez des restaurants d'exception <br>sélectionnés par nos soins</p>
+	<p class="decouverte-resto">Découvrez des restaurants d'exception sélectionnés par nos soins</p>
 	<button class="explore-bouton">Explorez nos restaurants</button>
 	<!--FONCTIONNEMENT-->
 	<section id="fonctionnement" class="section-accueil">
@@ -44,21 +44,19 @@
 	</section>
 	<section id="restaurants" class="selection-restaurant">
 		<h2 class="titre section">Restaurants</h2>
-		<div class="liste-grille">
 			<a href="#" class="article-resto">
-				<img class="restaurantImage" src="img/Restaurants/La palette du gout.jpg" height="180"
-					width="335" alt="La palette du goût">
-				<div class="tag">Nouveau</div>
-				<section class="Info">
-					<div class="Texte">
-						<h3 class="nom-resto">La palette du goût</h3>
-						<p class="réservation-resto">Ménilmontant</p>
-					</div>
-					<span class="icone favorite"><i class="fa-regular fa-heart"></i></span>
-					<span class="icon-fav"></span>
-				</section></a>
+			<img class="resto-img" src="img/Restaurants/La palette du gout.jpg" height="180"width="335" alt="La palette du goût">
+		<div class="tag">Nouveau</div>
+	<section class="Info">
+		<div class="Texte">
+			<h3 class="nom-resto">La palette du goût</h3>
+			<p class="réservation-resto">Ménilmontant</p>
+			<span class="icone favorite"><i class="fas fa-regular fa-heart"></i></span>
+		</div>
+					
+	</section></a>
 				<a href="#" class="article-resto">
-					<img class="restaurantImage" src="img/Restaurants/La note enchantée.jpg" height="180"
+					<img class="restp-img" src="img/Restaurants/La note enchantée.jpg" height="180"
 						width="335" alt="La note enchantée">
 					<div class="tag">Nouveau</div>
 					<section class="Info">
@@ -66,11 +64,11 @@
 							<h3 class="nom-resto">La note enchantée</h3>
 							<p class="réservation-resto">Charonne</p>
 						</div>
-						<span class="icone favorite"><i class="fa-regular fa-heart"></i></span>
+						<span class="icone-fav"><i class="fas fa-regular fa-heart"></i></span>
 					<span class="icon-fav"></span>
 					</section></a>
 					<a href="#" class="article-resto">
-						<img class="restaurantImage" src="img/Restaurants/le délice des sens.jpg" height="180"
+						<img class="resto-img" src="img/Restaurants/le délice des sens.jpg" height="180"
 							width="335" alt="A la française">
 						<div class="tag">Nouveau</div>
 						<section class="Info">
@@ -78,7 +76,7 @@
 								<h3 class="nom-resto">A la française</h3>
 								<p class="réservation-resto">Cité Rouge</p>
 							</div>
-							<span class="icone favorite"><i class="fa-regular fa-heart"></i></span>
+							<span class="icone-fav"><i class="fas fa-regular fa-heart"></i></span>
 								<span class="icon-fav"></span>
 						</section></a>
 						<a href="#" class="article-resto">
@@ -90,9 +88,9 @@
 									<h3 class="nom-resto">Le délice des sens</h3>
 									<p class="réservation-resto">Folie-Méricourt</p>
 								</div>
-								<span class="icone favorite"><i class="fas fa-regular fa-heart"></i></span>
-								<span class="icon-fav"></span>
-							</section></a>
+								<span class="icone-fav"><i class="fas fa-regular fa-heart"></i></span>
+								
+	</section></a>
 							<footer>
 								<h3 class="titre-footer">Ohmyfood</h3>
 								<nav>
