--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					
 	</section></a>
 				<a href="#" class="article-resto">
-					<img class="restp-img" src="img/Restaurants/La note enchantée.jpg" height="180"
+					<img class="resto-img" src="img/Restaurants/La note enchantée.jpg" height="180"
 						width="335" alt="La note enchantée">
 					<div class="tag">Nouveau</div>
 					<section class="Info">
@@ -68,7 +68,7 @@
 					<span class="icon-fav"></span>
 					</section></a>
 					<a href="#" class="article-resto">
-						<img class="resto-img" src="img/Restaurants/le délice des sens.jpg" height="180"
+						<img class="resto-img" src="img/Restaurants/à la française.jpg" height="180"
 							width="335" alt="A la française">
 						<div class="tag">Nouveau</div>
 						<section class="Info">
@@ -80,7 +80,7 @@
 								<span class="icon-fav"></span>
 						</section></a>
 						<a href="#" class="article-resto">
-							<img class="restaurantImage" src="img/Restaurants/le délice des sens.jpg" height="180"
+							<img class="resto-img" src="img/Restaurants/le délice des sens.jpg" height="180"
 								width="335" alt="Le délice des sens">
 							<div class="tag">Nouveau</div>
 							<section class="Info">
