--- a/index.html
+++ b/index.html
@@ -55,60 +55,56 @@
 		</div>
 					
 	</section></a>
-				<a href="#" class="article-resto">
-					<img class="resto-img" src="img/Restaurants/La note enchantée.jpg" height="180"
-						width="335" alt="La note enchantée">
-					<div class="tag">Nouveau</div>
-					<section class="Info">
-						<div class="Texte">
-							<h3 class="nom-resto">La note enchantée</h3>
-							<p class="réservation-resto">Charonne</p>
-						</div>
-						<span class="icone-fav"><i class="fas fa-regular fa-heart"></i></span>
-					<span class="icon-fav"></span>
-					</section></a>
-					<a href="#" class="article-resto">
-						<img class="resto-img" src="img/Restaurants/à la française.jpg" height="180"
-							width="335" alt="A la française">
-						<div class="tag">Nouveau</div>
-						<section class="Info">
-							<div class="Texte">
-								<h3 class="nom-resto">A la française</h3>
-								<p class="réservation-resto">Cité Rouge</p>
-							</div>
-							<span class="icone-fav"><i class="fas fa-regular fa-heart"></i></span>
-								<span class="icon-fav"></span>
-						</section></a>
-						<a href="#" class="article-resto">
-							<img class="resto-img" src="img/Restaurants/le délice des sens.jpg" height="180"
-								width="335" alt="Le délice des sens">
-							<div class="tag">Nouveau</div>
-							<section class="Info">
-								<div class="Texte">
-									<h3 class="nom-resto">Le délice des sens</h3>
-									<p class="réservation-resto">Folie-Méricourt</p>
-								</div>
-								<span class="icone-fav"><i class="fas fa-regular fa-heart"></i></span>
-								
+	<a href="#" class="article-resto">
+		<img class="resto-img" src="img/Restaurants/La note enchantée.jpg" height="180"width="335" alt="La note enchantée">
+	<div class="tag">Nouveau</div>
+	<section class="Info">
+	<div class="Texte">
+		<h3 class="nom-resto">La note enchantée</h3>
+		<p class="réservation-resto">Charonne</p>
+	</div>
+	<span class="icone-fav"><i class="fas fa-regular fa-heart"></i></span>
+	<span class="icon-fav"></span>
 	</section></a>
-							<footer>
-								<h3 class="titre-footer">Ohmyfood</h3>
-								<nav>
-									<a href="#" class="lien-pied-de-page">
-										<span class="icone-fav-pied-de-page">Restaurant</span>
-										Proposer un restaurant
-									</a>
-									<a href="#" class="lien-pied-de-page">
-										<span class="icone-fav-pied-de-page">Partenariat</span>
-										Devenir partenaire
-									</a>
-									<a href="#" class="lien-pied-de-page">Mentions légales</a>
-									<a href="mailto:contact@ohmyfood.com" class="lien-pied-de-page">Contact</a>
-								</nav>
-							</footer>
+	<a href="#" class="article-resto">
+		<img class="resto-img" src="img/Restaurants/à la française.jpg" height="180"width="335" alt="A la française">
+	<div class="tag">Nouveau</div>
+	<section class="Info">
+	<div class="Texte">
+		<h3 class="nom-resto">A la française</h3>
+		<p class="réservation-resto">Cité Rouge</p>
+	</div>
+	<span class="icone-fav"><i class="fas fa-regular fa-heart"></i></span>
+	<span class="icon-fav"></span>
+	</section></a>
+	<a href="#" class="article-resto">
+		<img class="resto-img" src="img/Restaurants/le délice des sens.jpg" height="180"width="335" alt="Le délice des sens">
+		<div class="tag">Nouveau</div>
+		<section class="Info">
+		<div class="Texte">
+			<h3 class="nom-resto">Le délice des sens</h3>
+			<p class="réservation-resto">Folie-Méricourt</p>
+		</div>
+	<span class="icone-fav"><i class="fas fa-regular fa-heart"></i></span>
+	</section></a>
+	<footer>
+		<h3 class="titre-footer">Ohmyfood</h3>
+	<nav>
+		<a href="#" class="lien-pied-de-page">
+			<span class="icone-fav-pied-de-page">Restaurant</span>
+			Proposer un restaurant
+		</a>
+		<a href="#" class="lien-pied-de-page">
+			<span class="icone-fav-pied-de-page">Partenariat</span>
+			Devenir partenaire
+		</a>
+		<a href="#" class="lien-pied-de-page">Mentions légales</a>
+		<a href="mailto:contact@ohmyfood.com" class="lien-pied-de-page">Contact</a>
+	</nav>
+	</footer>
 
 
-</section>
+</section>						
 </body>
 </section>
 </main>
