--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="Texte">
 			<h3 class="nom-resto">La palette du goût</h3>
 			<p class="réservation-resto">Ménilmontant</p>
-			<span class="icone favorite"><i class="fas fa-regular fa-heart"></i></span>
+			<span class="icone favorite"><i class="far fa-heart logo_heart"></i></span>
 		</div>
 					
 	</section></a>
@@ -63,7 +63,7 @@
 		<h3 class="nom-resto">La note enchantée</h3>
 		<p class="réservation-resto">Charonne</p>
 	</div>
-	<span class="icone-fav"><i class="fas fa-regular fa-heart"></i></span>
+	<span class="icone-fav"><i class="far fa-heart logo_heart"></i></span>
 	<span class="icon-fav"></span>
 	</section></a>
 	<a href="#" class="article-resto">
@@ -74,7 +74,7 @@
 		<h3 class="nom-resto">A la française</h3>
 		<p class="réservation-resto">Cité Rouge</p>
 	</div>
-	<span class="icone-fav"><i class="fas fa-regular fa-heart"></i></span>
+	<span class="icone-fav"><i class="far fa-heart logo_heart"></i></span>
 	<span class="icon-fav"></span>
 	</section></a>
 	<a href="#" class="article-resto">
@@ -85,9 +85,10 @@
 			<h3 class="nom-resto">Le délice des sens</h3>
 			<p class="réservation-resto">Folie-Méricourt</p>
 		</div>
-	<span class="icone-fav"><i class="fas fa-regular fa-heart"></i></span>
+	<span class="icone-fav"><i class="far fa-heart logo_heart"></i></span>
 	</section></a>
 	<footer>
+		<div class="conteneur-footer">
 		<h3 class="titre-footer">Ohmyfood</h3>
 	<nav>
 		<a href="#" class="lien-pied-de-page">
@@ -100,6 +101,7 @@
 		</a>
 		<a href="#" class="lien-pied-de-page">Mentions légales</a>
 		<a href="mailto:contact@ohmyfood.com" class="lien-pied-de-page">Contact</a>
+		</div>
 	</nav>
 	</footer>
 
