--- a/index.html
+++ b/index.html
@@ -43,10 +43,41 @@
 		</div>
 	</section>
 	<section class="menus">
-		<div class="cartes">restaurant1</div>
-		<div class="cartes">restaurant2</div>
-		<div class="cartes">restaurant3</div>
-		<div class="cartes">restaurant4</div>
+		<h2>Restaurants</h2>
+		<div class="menus-cartes">
+		<a href="#" class="cartes new">
+			<div class="cartes-img"><img src="img/Restaurants/La palette du gout.jpg" alt="La palette du gout"/></div>
+			<div class="cartes-description">
+				<h3>La palette du gout</h3>
+				<p>Ménilmontant</p>
+				<i class="far fa-heart"></i>
+			 </div>	
+		</a>
+		<a href="#" class="cartes new">
+			<div class="cartes-img"><img src="img/Restaurants/La note enchantée.jpg" alt="La note enchantée"/></div>
+			<div class="cartes-description">
+				<h3>La note enchantée</h3>
+				<p>Charonne</p>
+				<i class="far fa-heart"></i>
+			</div>
+		</a>
+		<a href="#" class="cartes">
+			<div class="cartes-img"><img src="img/Restaurants/à la française.jpg" alt="A la française"/></div>
+			<div class="cartes-description">
+			<h3>A la française</h3>
+			<p>Cité Rouge</p>
+			<i class="far fa-heart"></i>
+			</div>
+		</a>
+		<a href="#" class="cartes">
+			<div class="cartes-img"><img src="img/Restaurants/le délice des sens.jpg" alt="Le délice des sens"/></div>
+			<div class="cartes-description">
+				<h3>Le délice des sens</h3>
+				<p>Folie-Méricourt</p>
+				<i class="far fa-heart"></i>
+			</div>
+		</a>
+		</div>
 	</section>
 	
 
