--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
 		<i class="fas fa-map-marker-alt"></i>
 		<h2>Paris, Belleville</h2>
 	</div>
+
 	<!--EXPLORATION-->
+
 	<section class="exploration">
 	<h2 class="reservez-menu">Réservez le menu qui<br> vous convient</h2>
 	<p class="decouverte-resto">Découvrez des restaurants d'exception sélectionnés par nos soins</p>
 	<button class="explore-bouton">Explorez nos restaurants</button>
+	
 	<!--FONCTIONNEMENT-->
+
 	<section id="fonctionnement" class="section-accueil">
 		<h2>Fonctionnement</h2>
 		<div class="liste-grille">
@@ -41,20 +45,25 @@
 				<span class="icone-couleur"><i class="fas fa-store"></i>Dégustez au restaurant</span>
 			</article>
 		</div>
+
+		<!-- SECTIONS RESTAURANTS -->
+
 	</section>
 	<section class="menus">
 		<h2>Restaurants</h2>
 		<div class="menus-cartes">
-		<a href="#" class="cartes new">
+		<a href="#" class="cartes">
 			<div class="cartes-img"><img src="img/Restaurants/La palette du gout.jpg" alt="La palette du gout"/></div>
+			<span class="info-carte">Nouveau</span>
 			<div class="cartes-description">
 				<h3>La palette du gout</h3>
 				<p>Ménilmontant</p>
 				<i class="far fa-heart"></i>
 			 </div>	
 		</a>
-		<a href="#" class="cartes new">
+		<a href="#" class="cartes">
 			<div class="cartes-img"><img src="img/Restaurants/La note enchantée.jpg" alt="La note enchantée"/></div>
+			<span class="info-carte">Nouveau</span>
 			<div class="cartes-description">
 				<h3>La note enchantée</h3>
 				<p>Charonne</p>
@@ -77,11 +86,28 @@
 				<i class="far fa-heart"></i>
 			</div>
 		</a>
-		</div>
-	</section>
-	
+	</div>
 
-						
+	<!-- PIEP DE PAGE -->
+
+	<footer>
+        <p class="logo">ohmyfood</p>
+        <ul>
+            <li>
+                <a href=""><i class="fas fa-utensils"></i>Proposer un restaurant</a>
+            </li>
+            <li>
+                <a href=""><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
+            </li>
+            <li>
+                <a href="">Mentions légales</a>
+            </li>
+            <li>
+                <a href="mailto:contact@ohmyfood.fr">Contact</a>
+            </li>
+        </ul>
+    </footer>
+	</section>				
 </body>
 </main>
 </html>
