commit sur master

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<i class="far fa-heart"></i>
 			 </div>	
 		</a>
-		<a href="#" class="cartes">
+		<a href="menu-la-note-enchantee.html" class="cartes">
 			<div class="cartes-img"><img src="img/Restaurants/La note enchantée.jpg" alt="La note enchantée"/></div>
 			<span class="info-carte">Nouveau</span>
 			<div class="cartes-description">
