commit sur master

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
    <link rel="stylesheet" href="css/styles.css">
    
 </head>
-
-<body>
-	<div class="loader"></div>
 <header>
    <h1>OhMyFood</h1>
 </header>
@@ -53,7 +50,7 @@
 	<section class="menus">
 		<h2>Restaurants</h2>
 		<div class="menus-cartes">
-		<a href="menu-la-palette-du-gout.html" class="cartes">
+		<a href="menu1-la-palette-du-gout.html" class="cartes">
 			<div class="cartes-img"><img src="img/Restaurants/La palette du gout.jpg" alt="La palette du gout"/></div>
 			<span class="info-carte">Nouveau</span>
 			<div class="cartes-description">
@@ -62,7 +59,7 @@
 				<i class="far fa-heart"></i>
 			 </div>	
 		</a>
-		<a href="menu-la-note-enchantee.html" class="cartes">
+		<a href="menu2-la-note-enchantee.html" class="cartes">
 			<div class="cartes-img"><img src="img/Restaurants/La note enchantée.jpg" alt="La note enchantée"/></div>
 			<span class="info-carte">Nouveau</span>
 			<div class="cartes-description">
@@ -71,7 +68,7 @@
 				<i class="far fa-heart"></i>
 			</div>
 		</a>
-		<a href="#" class="cartes">
+		<a href="menu3-a-la-francaise.html" class="cartes">
 			<div class="cartes-img"><img src="img/Restaurants/à la française.jpg" alt="A la française"/></div>
 			<div class="cartes-description">
 			<h3>A la française</h3>
@@ -79,7 +76,7 @@
 			<i class="far fa-heart"></i>
 			</div>
 		</a>
-		<a href="#" class="cartes">
+		<a href="menu4-au-delice-des-sens.html" class="cartes">
 			<div class="cartes-img"><img src="img/Restaurants/le délice des sens.jpg" alt="Le délice des sens"/></div>
 			<div class="cartes-description">
 				<h3>Le délice des sens</h3>
