--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <header>
    <h1>OhMyFood</h1>
 </header>
+<body>
+    <div class="loader"></div>
 <main>
 	<div class="ville">
 		<i class="fas fa-map-marker-alt"></i>
@@ -26,23 +28,15 @@
 	<button class="explore-bouton">Explorez nos restaurants</button>
 	
 	<!--FONCTIONNEMENT-->
+	<section class="tuto">
 
-	<section id="fonctionnement" class="section-accueil">
-		<h2>Fonctionnement</h2>
-		<div class="liste-grille">
-			<article class="carte1">
-			<div class="numero">1</div>
-			<span class="icone"> <i class="fas fa-mobile-alt"></i>Choisissez votre restaurant</span>	
-			</article>
-			<article class="carte2">
-				<div class="numero">2</div>
-					<span class="icone"><i class="fas fa-list-ul"></i>Composez votre menu</span>
-			</article>
-			<article class="carte3">
-				<div class="numero">3</div>
-				<span class="icone-couleur"><i class="fas fa-store"></i><p>Dégustez au restaurant</p></span>
-			</article>
-		</div>
+	<h2>Fonctionnement</h2>
+	<ol>
+	  <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
+	  <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
+	  <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
+	</ol>
+	</section>
 
 		<!-- SECTIONS RESTAURANTS -->
 
