--- a/menu1-la-palette-du-gout.html
+++ b/menu1-la-palette-du-gout.html
@@ -17,7 +17,7 @@
                 </a>
             </div> 
             <div class="logo">
-                <div class="logo"><img src="img/Logo/ohmyfood@2x.svg" alt="Ohmyfood"></div>
+                <div class="logo"><img src="img/Logo/ohmyfood.png" alt="Ohmyfood"></div>
             </div>                  
     </header>
     <main>
