--- a/menu2-la-note-enchantee.html
+++ b/menu2-la-note-enchantee.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Ohmyfood-La Palette du gout</title>
    <script src="https://kit.fontawesome.com/ac33e92e0d.js" crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="menu1.css">
+   <link rel="stylesheet" href="css/menu1.css">
 </head>
 <body>  
     <header>
