--- a/menu1-la-palette-du-gout.html
+++ b/menu1-la-palette-du-gout.html
@@ -1,28 +1,29 @@
-<!DOCTYPE html>
+<! DOCTYPE html>
 <html lang="fr">
-<head>
+<tête>
    <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Ohmyfood-La Palette du gout</title>
-   <script src="https://kit.fontawesome.com/ac33e92e0d.js" crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="css/menu1.css">
-</head>
-<body> 
-    <header>
-        <div class="header" >
+   <meta http-equiv="X-UA-Compatible » content="IE=edge">
+   <meta name="viewport » content="width=device-width, initial-scale=1.0">
+   <titre>Ohmyfood-La Palette du gout</titre>
+   <script src="https://kit.fontawesome.com/ac33e92e0d.js » crossorigin="anonymous"></script>
+   <link rel="stylesheet » href="menu1.css">
+</tête>
+<corps> 
+    <en-tête>
+        <div class="en-tête" >
             <div class="retour"></div>
                 <a href ="index.html">
                     <i class="fas fa-arrow-left"></i>
-                </a>
+                </un>
             </div> 
             <div class="logo">
-                <div class="logo"><img src="img/Logo/ohmyfood.png" alt="Ohmyfood"></div>
+                <div class="logo"><img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood"></div>
             </div>                  
-    </header>
-    <main>
+    </en-tête>
+    <principal>
     <div class="img">
-        <div class="cartes-img"><img src="img/Restaurants/La palette du gout.jpg" alt="La palette du gout"/></div>               
+        <div class="cartes-img">
+            <img src="img/Restaurants/La palette du gout.jpg"alt="La palette du gout"></div>               
         </div>
         <div class="gastronomie">
                 
@@ -32,17 +33,17 @@
                     <i class="fas fa-heart coeurplein"></i>
                     <i class="far fa-heart coeurvide"></i>
                 </div>
-                <section class="entree">
+                <section class="entrée">
                     <h2 class="vue-laterale">Entrées</h2>
                         <p class="sous-titre">ENTREES</p>
-                    <div class="choix-entree">
+                    <div class="choix-entrée">
                         <div class="visible">
                             <div class="nom">
-                                <p class="gras">Fricassée d'escargot</p>
+                                <p class="gras">Fricassée d’escargot</p>
                             </div>
                             <div class="prix-détail">
-                                <div class="detail">
-                                    <p>Au piment d'Espelette</p>
+                                <div class="détail">
+                                    <p>Au piment d’Espelette</p>
                                 </div>
                                 <div class="prix-gras">
                                     <p>25€</p>
@@ -53,13 +54,13 @@
                             <i class="fas fa-check-circle rotation"></i>
                         </div>
                     </div>
-                    <div class="choix-entree">
+                    <div class="choix-entrée">
                         <div class="visible">
                             <div class="nom">
                                 <p class="gras">Foie gras de canard mi-cuit</p>
                             </div>
-                            <div class="prix-detail">
-                                <div class="detail">
+                            <div class="prix-détail">
+                                <div class="détail">
                                     <p>Et ses copeaux de truffe noire</p>
                                 </div>
                                 <div class="prix-gras">
@@ -71,13 +72,13 @@
                         <i class="fas fa-check-circle rotation"></i>
                     </div>    
                     </div>
-                    <div class="choix-entree">
+                    <div class="choix-entrée">
                     <div class="visible">
                     <div class="nom">
                         <p class="gras">Oeuf au plat </p>
                     </div>
-                    <div class="prix-detail">
-                    <div class="detail">
+                    <div class="prix-détail">
+                    <div class="détail">
                         <p>Assaisonné à la truffe sur lit de caviar</p>
                     </div>
                     <div class="prix-gras">
@@ -98,8 +99,8 @@
                                 <div class="nom">
                                     <p class="gras">Filet de boeuf aux herbes</p>
                                 </div>
-                                <div class="prix-detail">
-                                    <div class="detail"> 
+                                <div class="prix-détail">
+                                    <div class="détail"> 
                                         <p>Accompagné de sa ribambelle de légumes</p>
                                     </div>                                    
                                     <div class="prix-gras">
@@ -116,8 +117,8 @@
                                 <div class="nom">
                                     <p class="gras">Parmentier de queue de boeuf</p>
                                 </div>
-                                <div class="prix-detail">
-                                    <div class="detail"> 
+                                <div class="prix-détail">
+                                    <div class="détail"> 
                                         <p>À la truffe noire sur sa purée de panais</p>
                                     </div>
                                     <div class="prix-gras">
@@ -134,8 +135,8 @@
                                 <div class="intitule">
                                     <p class="gras">Filet de turbot</p>
                                 </div>
-                                <div class="prix-detail">
-                                    <div class="detail"> 
+                                <div class="prix-détail">
+                                    <div class="détail"> 
                                         <p>Aux agrumes</p>
                                     </div>
                                     <div class="prix-gras">
@@ -157,8 +158,8 @@
                                 <div class="nom">
                                     <p class="gras">Paris-Brest</p>
                                 </div>
-                                <div class="prix-detail">
-                                    <div class="detail"> 
+                                <div class="prix-détail">
+                                    <div class="détail"> 
                                         <p>Revisité</p>
                                     </div>
                                     <div class="prix-gras">
@@ -173,10 +174,10 @@
                         <div class="choix-desserts">
                             <div class="visible">
                                 <div class="nom">
-                                    <p class="gras">Macaron au chocolat d'exception</p>
+                                    <p class="gras">Macaron au chocolat d’exception</p>
                                 </div>
-                                <div class="prix-detail">
-                                    <div class="detail"> 
+                                <div class="prix-détail">
+                                    <div class="détail"> 
                                         <p>Et glace à la vanille de Madagascar</p>
                                     </div>
                                     <div class="prix-gras">
@@ -193,9 +194,9 @@
                                 <div class="nom">
                                     <p class="gras">Mousse au chocolat</p>
                                 </div>
-                                <div class="prix-detail">
-                                    <div class="detail"> 
-                                        <p>Au piment d'Espelette et à la truffe noire</p>
+                                <div class="prix-détail">
+                                    <div class="détail"> 
+                                        <p>Au piment d’Espelette et à la truffe noire</p>
                                     </div>    
                                     <div class="prix-gras">
                                         <p>23€</p>
@@ -208,40 +209,40 @@
                         </div>
                     </section>
                 </article> 
-                <div class="commander">
-                <div class="commander-entree"> 
+                <div class="commandant">
+                <div class="commander-entrée"> 
                     <a href="#"><p>Commander</p></a>
                 </div>
                 </div>
             </div>
-        </main>   
+        </principal>   
 <!-- PIED DE PAGE -->
-        <footer class="footer">
+        <footer class="pied de page">
         <h3>ohmyfood</h3>
         <div class="footer-rangee">
             <a href="#">
         <div class="footer-rangee-du-bas">
-                    <i class="fas fa-utensils"></i>
+                    <i class="fas fa-ustensiles"></i>
                     <p>Proposer un restaurant</p>
         </div>
-        </a>
+        </un>
         <a href="#">
         <div class="footer-rangee-du-bas">
             <i class="fas fa-hands-helping"></i>
             <p>Devenir partenaire</p>
         </div>
-        </a>
+        </un>
         <a href="#">
         <div>
             <p>Mentions légales</p>
         </div>
-        </a>
+        </un>
         <a href="mailto:contact@ohmyfood.fr">
         <div>
             <p>Contact</p>
         </div>
-        </a>
+        </un>
         </div>
-        </footer>
-</body>
+        </pied de page>
+</corps>
 </html>
